--- a/SistemaVenda.csproj
+++ b/SistemaVenda.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <Folder Include="Helpers\" />
-    <Folder Include="Views\Report\" />
+    <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
   <ItemGroup>
